--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+peg = "0.6"
+regex = "1"
 serde_json="1.0"
+rand="0.7"
+async-std="1.7"
 
 [dependencies.serenity]
 version = "0.9"
